--- a/PawBank/Base.lproj/Main.storyboard
+++ b/PawBank/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,57 +22,95 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDK-a1-LX1" userLabel="nameLabel">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wDK-a1-LX1" userLabel="nameLabel">
                                 <rect key="frame" x="16" y="44" width="343" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="41" id="QVr-39-0rY"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9pQ-mn-hKj" userLabel="animalImageView">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9pQ-mn-hKj" userLabel="animalImageView">
                                 <rect key="frame" x="27" y="227" width="321" height="212"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="csR-f8-zzO">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="csR-f8-zzO">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Animals" id="Rt0-j1-41w"/>
                                 </items>
                             </navigationBar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xfi-km-b5l" userLabel="pawIcon">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xfi-km-b5l" userLabel="pawIcon">
                                 <rect key="frame" x="302" y="169" width="46" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="etb-IM-PMO" userLabel="moneyProgressView">
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="etb-IM-PMO" userLabel="moneyProgressView">
                                 <rect key="frame" x="27" y="193" width="256" height="2"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </progressView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Bio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="937-Et-ZiI" userLabel="bioLabel">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="937-Et-ZiI" userLabel="bioLabel">
                                 <rect key="frame" x="27" y="447" width="321" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dBm-vA-aRb" userLabel="adoptButton">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dBm-vA-aRb" userLabel="adoptButton">
                                 <rect key="frame" x="27" y="572" width="42" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Adopt"/>
+                                <connections>
+                                    <action selector="adoptButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OHm-eB-BQi"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bez-FC-KeD" userLabel="donateButton">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bez-FC-KeD" userLabel="donateButton">
                                 <rect key="frame" x="172" y="572" width="30" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="$"/>
+                                <connections>
+                                    <action selector="paymentButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KPf-a0-OX0"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HkH-Fw-wCg" userLabel="fosterButton">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HkH-Fw-wCg" userLabel="fosterButton">
                                 <rect key="frame" x="303" y="572" width="44" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Foster"/>
+                                <connections>
+                                    <action selector="fosterButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aFc-Yy-peP"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="bez-FC-KeD" firstAttribute="baseline" secondItem="HkH-Fw-wCg" secondAttribute="baseline" id="5Fb-56-C7h"/>
+                            <constraint firstItem="dBm-vA-aRb" firstAttribute="baseline" secondItem="bez-FC-KeD" secondAttribute="baseline" id="ByL-AE-JNO"/>
+                            <constraint firstItem="etb-IM-PMO" firstAttribute="centerY" secondItem="xfi-km-b5l" secondAttribute="centerY" id="DPR-uo-cgH"/>
+                            <constraint firstItem="9pQ-mn-hKj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Dmg-Au-Y2i"/>
+                            <constraint firstItem="etb-IM-PMO" firstAttribute="leading" secondItem="9pQ-mn-hKj" secondAttribute="leading" id="KD1-bO-duY"/>
+                            <constraint firstItem="wDK-a1-LX1" firstAttribute="centerX" secondItem="9pQ-mn-hKj" secondAttribute="centerX" id="Kbh-Ne-clG"/>
+                            <constraint firstItem="937-Et-ZiI" firstAttribute="leading" secondItem="dBm-vA-aRb" secondAttribute="leading" id="LkM-A3-wd7"/>
+                            <constraint firstItem="csR-f8-zzO" firstAttribute="centerX" secondItem="wDK-a1-LX1" secondAttribute="centerX" id="QDQ-2C-Lbi"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="etb-IM-PMO" secondAttribute="trailing" constant="76" id="SpS-Po-SoS"/>
+                            <constraint firstItem="wDK-a1-LX1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="TFO-i0-hjr"/>
+                            <constraint firstItem="937-Et-ZiI" firstAttribute="top" secondItem="9pQ-mn-hKj" secondAttribute="bottom" constant="8" symbolic="YES" id="U6s-UA-qU5"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="HkH-Fw-wCg" secondAttribute="trailing" constant="12" id="Xq3-2M-fuU"/>
+                            <constraint firstItem="csR-f8-zzO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ZOa-zA-z3b"/>
+                            <constraint firstItem="937-Et-ZiI" firstAttribute="centerX" secondItem="bez-FC-KeD" secondAttribute="centerX" id="b6X-AI-q7r"/>
+                            <constraint firstItem="xfi-km-b5l" firstAttribute="trailing" secondItem="9pQ-mn-hKj" secondAttribute="trailing" id="cL0-2E-exj"/>
+                            <constraint firstItem="xfi-km-b5l" firstAttribute="centerX" secondItem="HkH-Fw-wCg" secondAttribute="centerX" id="fOR-L7-SdY"/>
+                            <constraint firstItem="9pQ-mn-hKj" firstAttribute="trailing" secondItem="937-Et-ZiI" secondAttribute="trailing" id="fgW-tT-SwB"/>
+                            <constraint firstItem="etb-IM-PMO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="11" id="fzh-2a-z3N"/>
+                            <constraint firstItem="9pQ-mn-hKj" firstAttribute="top" secondItem="etb-IM-PMO" secondAttribute="bottom" constant="32" id="hBE-gr-d6A"/>
+                            <constraint firstAttribute="trailing" secondItem="csR-f8-zzO" secondAttribute="trailing" id="lcb-gg-Ktu"/>
+                            <constraint firstItem="csR-f8-zzO" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="nsU-Ix-VFA"/>
+                            <constraint firstItem="wDK-a1-LX1" firstAttribute="top" secondItem="csR-f8-zzO" secondAttribute="bottom" id="qwP-9y-tTR"/>
+                            <constraint firstItem="xfi-km-b5l" firstAttribute="top" secondItem="wDK-a1-LX1" secondAttribute="bottom" constant="84" id="sha-eh-pAi"/>
+                            <constraint firstItem="9pQ-mn-hKj" firstAttribute="top" secondItem="xfi-km-b5l" secondAttribute="bottom" constant="8" symbolic="YES" id="vcY-FB-LH6"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dBm-vA-aRb" secondAttribute="bottom" constant="65" id="xAu-Dt-Mv5"/>
+                            <constraint firstItem="9pQ-mn-hKj" firstAttribute="leading" secondItem="937-Et-ZiI" secondAttribute="leading" id="xOK-sc-ICQ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bioLabel" destination="937-Et-ZiI" id="yrd-4u-AB9"/>
+                        <outlet property="nameLabel" destination="wDK-a1-LX1" id="8eA-nT-bWR"/>
+                        <outlet property="navBar" destination="csR-f8-zzO" id="TCX-61-c9L"/>
+                        <outlet property="petImageView" destination="9pQ-mn-hKj" id="8AE-aK-Uto"/>
+                        <outlet property="progressView" destination="8bC-Xf-vdC" id="oRS-Vo-wQ3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
